--- a/Servidor/Servidor/Servidor/Servidor.csproj
+++ b/Servidor/Servidor/Servidor/Servidor.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Analizador\LUP\arbol\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
