--- a/Cliente/cliente-app/package.json
+++ b/Cliente/cliente-app/package.json
@@ -23,24 +23,31 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "@progress/kendo-angular-treeview": "^4.0.1",
-    "blockly": "git://github.com/google/blockly.git#1.20190419.0",
-    "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
     "@progress/kendo-angular-common": "^1.0.0",
     "@progress/kendo-angular-l10n": "^2.0.0",
-    "@progress/kendo-theme-default": "latest"
+    "@progress/kendo-angular-treeview": "^4.0.1",
+    "@progress/kendo-theme-default": "latest",
+    "blockly": "git://github.com/google/blockly.git#1.20190419.0",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.5.4",
+    "file-system": "^2.2.2",
+    "hammerjs": "^2.0.8",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.26"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.10.52",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
