--- a/Servidor/Servidor/Servidor/Servidor.csproj
+++ b/Servidor/Servidor/Servidor/Servidor.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Analizador\LUP\arbol\" />
+    <Folder Include="Models\DML\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
