--- a/Servidor/Servidor/Servidor/Servidor.csproj
+++ b/Servidor/Servidor/Servidor/Servidor.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Analizador\LUP\arbol\" />
     <Folder Include="Models\DML\" />
+    <Folder Include="Models\FCL\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
